new functionality development (console utility bar)

--- a/src/force-app/main/default/classes/CasesService.cls
+++ b/src/force-app/main/default/classes/CasesService.cls
@@ -24,4 +24,15 @@ public with sharing class CasesService {
             }
         }
     }
+
+    @AuraEnabled
+    public static String getSobjectTypeById(Id recordId) {
+        try {
+            String objApiName = recordId.getSobjectType().getDescribe().getName();
+            return objApiName;
+        } catch (Exception e) {
+            throw new AuraHandledException(e.getMessage());
+        }
+
+    }
 }
