--- a/src/force-app/main/default/classes/UserSelector.cls
+++ b/src/force-app/main/default/classes/UserSelector.cls
@@ -1,5 +1,5 @@
 public with sharing class UserSelector {
     public static List<User> getInactiveUsers() {
-        return [SELECT Id FROM User WHERE IsActive = false];
+        return [SELECT Id FROM User WHERE IsActive = false WITH SECURITY_ENFORCED];
     }
 }
